[package]
name = "mempool_space"
version = "0.0.1"
edition = "2021"
authors = ["RandyMcMillan <randy.lee.mcmillan@gmail.com>", "Simon Brummer <simon.brummer@posteo.de>"]
description = "mempool.space api interface."
license = "MPL-2.0"
readme = "README.md"
repository = "https://github.com/randymcmillan/mempool_space.git"
keywords = ["bitcoin", "mempool"]
categories = ["network-programming"]

[dependencies]
ascii = "1.1.0"
dns-lookup = { version = "1.0.7" }
futures    = { version = "0.3.17", optional = true }
reqwest = { version = "0.11", default-features = false, features = ["blocking", "json", "rustls-tls-webpki-roots"] }

tokio      = { version = "1.12.0", optional = true, features = ["rt-multi-thread", "sync", "time", "macros"] }
ureq = "2.9.6"

[dev-dependencies]
mockall = { version = "0.10.2" }

[features]
default = ["async"]
async   = ["futures", "tokio"]

[workspace]
members = [
    "examples/async_usage",
    "examples/async_usage_custom_target",
    "examples/usage",
]
