[package]
name = "mempool_space"
version = "0.0.4"
edition = "2021"
authors = ["RandyMcMillan <randy.lee.mcmillan@gmail.com>", "Simon Brummer <simon.brummer@posteo.de>"]
description = "mempool.space api interface."
license = "MPL-2.0"
readme = "README.md"
repository = "https://github.com/randymcmillan/mempool_space.git"
homepage = "https://github.com/randymcmillan/mempool_space"
keywords = ["bitcoin", "mempool"]
categories = ["network-programming"]

[dependencies]
ascii = "1.1.0"
dns-lookup = { version = "1.0.7" }
futures    = { version = "0.3.17", optional = true }
reqwest = { version = "0.11", default-features = false, features = ["blocking", "json", "rustls-tls-webpki-roots"] }

tokio      = { version = "1.12.0", optional = true, features = ["rt-multi-thread", "sync", "time", "macros"] }
ureq = "2.9.6"

[dev-dependencies]
mockall = { version = "0.10.2" }

[features]
default = ["async"]
async   = ["futures", "tokio"]

[workspace]
members = [
    "examples/async_usage",
    "examples/async_usage_custom_target",
    "examples/usage",
]

[workspace.package]
version = "0.0.4"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.14.1"
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = ["shell", "powershell", "homebrew"]
# A GitHub repo to push Homebrew formulas to
tap = "randymcmillan/homebrew-randymcmillan"
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-unknown-linux-musl", "x86_64-pc-windows-msvc"]
# Publish jobs to run in CI
publish-jobs = ["homebrew"]
# Publish jobs to run in CI
pr-run-mode = "plan"
# Whether to install an updater program
install-updater = true

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
