[package]
name = "async_usage"
version = { workspace = true }
edition = "2021"
authors = ["Simon Brummer <simon.brummer@posteo.de>"]
license = "MPL-2.0"
description = "Example: async usage of mempool_space"
homepage = "https://github.com/randymcmillan/mempool_space"

[package.metadata.wix]
upgrade-guid = "F7BF0353-496C-456D-A2F4-42DC4DB198FD"
path-guid = "88040266-BD85-4E2C-819C-C3F9FC4BB673"
license = false
eula = false

[dependencies]
mempool_space = {path = "../..", features = ["async"]}
