[package]
name = "async_usage_custom_target"
version = "0.0.3"
edition = "2021"
authors = ["Simon Brummer <simon.brummer@posteo.de>"]
license = "MPL-2.0"
description = "Example: async usage of mempool_space with custom target"
homepage = "https://github.com/randymcmillan/mempool_space"

[dependencies]
mempool_space = {path = "../..", features = ["async"]}
