[package]
name = "usage"
version = { workspace = true }
edition = "2021"
authors = ["Simon Brummer <simon.brummer@posteo.de>"]
license = "MPL-2.0"
description = "Example: usage of mempool_space"
homepage = "https://github.com/randymcmillan/mempool_space"

[dependencies]
mempool_space = {path = "../.."}
